# TFMIOT

./: LICENSE  README.md
Bluez/bluez-5.50/: Makefile  (+3 more)
mlforge/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
mlforge/configs/: run_1.yaml
mlforge/dashboard/backend/: app.py
mlforge/dashboard/frontend/: index.html  package-lock.json  package.json
mlforge/documentacion/: api.html  arquitectura.html  cli.html  export.html  index.html  quickstart.html  training.html
mlforge/documentacion/assets/: style.css
mlforge/examples/01_image_classifier/: config.yaml  config_tf.yaml  train.py
mlforge/mlforge/: __init__.py  cli.py  config.py  project_templates.py
mlforge/mlforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mlforge/mlforge/data/: augmentation.py  dataset.py  dataset_tf.py  huggingface.py  loaders.py
mlforge/mlforge/deploy/: scaffold.py  server.py
mlforge/mlforge/export/: __init__.py  base.py  benchmark.py  coreml_export.py  onnx_export.py  quantize.py  tfjs_export.py  tflite_export.py
mlforge/mlforge/models/: classifier.py  classifier_tf.py  detector.py  registry.py
mlforge/mlforge/training/: callbacks.py  metrics.py  trainer_pytorch.py  trainer_tf.py
mlforge/notebooks/: 01_neural_networks_from_scratch.ipynb  02_cnn_deep_dive.ipynb  03_transfer_learning_pytorch_tf.ipynb  04_model_optimization_edge.ipynb  05_deploy_everywhere.ipynb  06_understanding_deeppicar.ipynb
mlforge/tests/: test_config.py  test_export.py  test_models.py  test_sprint8.py  test_tensorflow.py
(+308 files in other folders)
