[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlforge"
version = "0.1.0"
description = "ML Model Factory - Train, optimize and deploy ML models to any platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Alejandro Cordon"},
]

dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "onnx>=1.15",
    "onnxruntime>=1.17",
    "onnxscript>=0.6",
    "typer>=0.12",
    "pyyaml>=6.0",
    "rich>=13.0",
    "Pillow>=10.0",
    "albumentations>=1.4",
    "tqdm>=4.66",
]

[project.optional-dependencies]
tensorflow = ["tensorflow>=2.16"]
export = [
    "coremltools>=7.0",
    "tf2onnx>=1.16",
]
dashboard = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sqlmodel>=0.0.16",
    "websockets>=12.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4",
]
all = ["mlforge[tensorflow,export,dashboard,dev]"]

[project.scripts]
mlforge = "mlforge.cli:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
